# TrafficManager

./: .gitignore  CMakeLists.txt  README.md  run.sh  traffic
exe/: pedestrian  traffic_light  vehicle
src/: main.c  traffic_light.c  traffic_light.h
src/pedestrian/: CMakeLists.txt  pedestrian.c
src/traffic/: CMakeLists.txt  traffic_light.c
src/vehicle/: CMakeLists.txt  vehicle.c
